2001-11-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (main): Bugfix/RFC2822 compliance.  Support multiple
	e-mail addresses in the From: and Reply-To: headers.  Previously,
	tmda-filter used only the first address from each header when
	matching.
	
2001-11-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter (main): Bugfix.  Move the check for 'confirm'
	cookies out in front of the FILTER_INCOMING.  Otherwise, the
	filter's rules might prevent the confirmation acceptance messages
	from getting through.

	(verify_confirm_cookie): Bounce rather than confirm bogus
	confirmation cookies.

2001-11-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-inject (usage): Added `-M', `--filter-match' command-line
	option.  Used to match addresses against the outgoing filter file
	from the command-line for testing/debugging purposes

	* tmda-filter (usage): Added `-M', `--filter-match' command-line
	option.  Used to match addresses against the incoming filter file
	from the command-line for testing/debugging purposes.

2001-11-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-inject (usage): Add `-O' to name the outgoing filter file.
	Overrides all other locations.

	* tmda-filter (usage): Add `-I' to name the incoming filter
	file.  Overrides all other locations.

2001-11-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-inject: Bugfix.  "Bouncing" a message from the MUA caused
	the exiting From: header to be modified which was incorrect.  Now
	we differentiate between sending a message for the first time, and
	resending a message.  If the message has a Resent-From: header,
	it's a bounce and we tag only the envelope sender and
	Resent-From:.  Otherwise, we tag the envelope sender and From:.

	(inject_message): Give the sender action an option.  When
	sender=address, address is used to create the sender cookie rather
	than the message recipient.
