@@ -129,6 +129,11 @@ message_size = str(len(message_body))
 
 # $SENDER is the envelope sender address.
 envelope_sender = os.environ.get('SENDER')
+# If SENDER exists but its value is empty, the message has an empty
+# envelope sender.  Set it to the string '<>' so it can be matched as
+# such in the filter files.
+if envelope_sender == '':
+    envelope_sender = '<>'
 
 # $RECIPIENT is the envelope recipient address.
 # Use the X-Originally-To header if it exists.
