@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Nov 27 18:18:40 2001 -->
+<!-- Thu Nov 29 11:43:37 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -237,6 +237,9 @@ size		comparison operator and number of bytes to compare to the
 		size of the message.  Only `<' and `>' are supported.
 
 </blockquote></pre>
+<strong>NOTE:</strong> To match the empty envelope sender such as bounce
+messages are sent with, use <b><code><></code></b> as the expression.
+<br><br>
 
 In addition to explicit e-mail addresses, you can use expressions
 based on UNIX shell-style wildcard characters in either the
@@ -308,8 +311,11 @@ kw,keyword=keyword (tag with a keyword address)
 
 ### ~/.tmda/filters/incoming (first match wins) ###
 
+# Accept all bounces (messages with an empty envelope sender)
+from <> ok
+
 # Accept all messages to postmistress
-to postmistress@* ok
+to postmistress@* accept
 
 # Bounce all messages from badboy.dom
 from *@=badboy.dom bounce
