@@ -1,3 +1,9 @@
+2001-11-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-filter (envelope_sender): If the message has an empty
+	envelope sender, change it to the string `<>'.  This provides a
+	way of matching empty envelope senders in the filter files.
+
 2001-11-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-filter (main): Bugfix/RFC2822 compliance.  Support multiple
